terraform/staging/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    environment: staging
    project: octabyte
