terraform/staging/k8s/octa-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: octa-app-service
  namespace: staging
  labels:
    app: octa-app
    environment: staging
spec:
  type: ClusterIP
  selector:
    app: octa-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
