terraform/staging/k8s/prometheus-internal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-internal
  namespace: monitoring
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-type: external
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: prometheus-kube-prometheus-prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      protocol: TCP
