terraform/staging/k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: staging
  labels:
    app: redis
    environment: staging
spec:
  type: ClusterIP

  selector:
    app: redis

  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
